src/Sidecars/default-sidecar.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: bookservice
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/api/BookData/"
                route:
                  cluster: bookservice
                  prefix_rewrite: "/book/"
                  request_mirror_policy:
                    cluster: bookservicemirror
              - match:
                  prefix: "/"
                route:
                  cluster: local_bookinfospa
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: local_bookinfospa
    max_requests_per_connection: 1
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 8080
  - name: bookservice
    max_requests_per_connection: 1
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: bookservice
        port_value: 80
  - name: bookservicemirror
    max_requests_per_connection: 1
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: bookservicemirror
        port_value: 80
admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
